tests/negative/Test10.sp
(* Wrong type of variable *)
pi:Double = 3.0;
main:Int() {
	return min();
}

min:Int(){
	return 0;
}